    of errno (EINVAL) when they detect that input timestamp (when the
    timestamp is non-NULL) is in some way invalid.

    Please review information in man page about errno values set by these
    functions.

  - cw_wait_for_tone_queue_critical() now sets errno to EINVAL and returns
    CW_FAILURE if function's argument is negative.

  xcwcp:

  - program's command line option "--sound" has been changed to
    "--system", for consistency with similar option in other unixcw's
    programs.

----------------------------------------------------------------------------


version 3.5.1 / 2017-02-XX

  libcw:

  - fixing a bug in libcw/generator that may have lead to a key being
    permanently in "down" state upon silencing a generator.

    If cwdaemon using libcw with NULL or Console output was generating
    tones from user input, and received ESC-4 escape request ("Abort
    currently sent message"), it was possible that while the message
    was interrupted, the key remained in "down" state.

    The fix in libcw makes sure that upon request to stop generating
    tones, the key always goes up, regardless of audio output type.

    The bug was reported and investigated, and fix was provided by
    Csahok Zoltan. Many thanks Zoli!

  - Library soname/version changed from 6.5.1 to 6.6.1.


----------------------------------------------------------------------------


version 3.5.0 / 2015-10-06

  libcw:

  - adding few more small tests.

  - trying to fix a problem of short space.  The problem occurs when
    client application has registered low-tone-queue callback, the
    threshold for the callback is set to 1, and a single end-of-word
    space has been enqueued by client application.  When the eow space
    is enqueued as a single tone-queue tone (or even as two tones)
    ("short space"), older versions of libcw may miss the event of
    passing of tone queue level from 2 to 1 and will not call the
    callback.
